<resources>
	<string name="google_maps_api_key">apikey goes here</string>
	<string name="send_feedback_preference_summary">Send feedback by email.</string>
 	<string name="user_activity_fetch_full_image_message">Fetching Image...</string>
	<string name="user_activity_fetch_full_image_title">Fetching Image</string>
	<string name="feedback_subject">Hinii for Android Feedback</string>
	<string name="network_unavailable">Network unavailable</string>
	<string name="hinii_server_not_responding">Hinii server not responding</string>
	<string name="hinii_server_request_timed_out">Hinii server request timed out</string>
	<string name="changelog_html_file">changelog-en.html</string>
	<string name="app_name">Hinii</string>
	<string name="call">Call</string>
	<string name="city">City</string>
	<string name="cross_street">Cross Street</string>
	<string name="feedback_error">Couldn\'t find configured email client.</string>
	<string name="feedback_label">Send Feedback</string>
	<string name="feedback_more">If you are reporting problem please answer the
		questions below:</string>
		<string name="login_failed_login_toast">Unable to log in. Please check your phone number
			and password.</string>
		<string name="login_get_started">Get Started</string>
		<string name="login_get_started_more">Got a Hinii account? We just need your email
			or
			phone# and password</string>
		<string name="login_label">Log-in</string>
		<string name="login_welcome_toast">Welcome to Hinii!</string>
		<string name="map_label">Map</string>
		<string name="mayor_header">Mayor</string>
		<string name="myinfo_label">My Info</string>
		<string name="nearby_label">Places</string>
		<string name="no_location_providers">Unable to determine location. Please Enable GPS or
			Network Location</string>
		<string name="no_nearby_venues">No nearby venues!</string>
		<string name="no_search_results">No search results.</string>
		<string name="no_tips_be_the_first">No tips here yet, be the first to add one!
		</string>
		<string name="password">Password</string>
		<string name="phone_number">Phone Number</string>
		<string name="phone_number_or_email">Phone or Email</string>
		<string name="preference_activity_label">Hinii Preferences</string>
		<string name="preferences_additional_settings">Additional Settings</string>
		<string name="preferences_additional_settings_summary">Modify additional settings with hinii.com.
		</string>
		<string name="preferences_cache_geo_loc_for_searches_title">Geolocation Caching</string>
		<string name="preferences_cache_geo_loc_for_searches_on">Cache geolocation between venue searches.</string>
		<string name="preferences_cache_geo_loc_for_searches_off">Clear your geolocation on each venue search.
		</string>
		<string name="preferences_category_checkin_defaults">Check-in Defaults</string>
		<string name="preferences_category_friends">Friends</string>
		<string name="preferences_category_startup">Startup</string>
		<string name="preferences_category_user_actions">User Actions</string>
		<string name="preferences_changelog">Changelog</string>
		<string name="preferences_changelog_summary">See what has changed between application versions.
		</string>
		<string name="preferences_city_name_summary">Update your Hinii city."</string>
		<string name="preferences_city_name_title">Update City</string>
		<string name="preferences_friend_add_summary">Find others who are also on Hinii.</string>
		<string name="preferences_friend_add_title">Add Friends</string>
		<string name="preferences_friend_requests_summary">Manage pending friend requests.</string>
		<string name="preferences_friend_requests_title">Friend Requests</string>
		<string name="preferences_immediate_checkin_summary_off">Prompt for a shout when using the check-in button
			on a venue page.</string>
		<string name="preferences_immediate_checkin_summary_on">Do not prompt for a shout when using the check-in
			button on a venue page.</string>
		<string name="preferences_immediate_checkin_title">Check-in without prompt</string>
		<string name="preferences_label">Preferences</string>
		<string name="preferences_logout_summary">Sign out of Hinii.</string>
		<string name="preferences_logout_title">Logout</string>
		<string name="preferences_other_settings">Other Settings</string>
		<string name="preferences_share_checkin_title">Tell my friends</string>
		<string name="preferences_share_summary_off">By default, don\'t tell my friends when I
			check-in.
	</string>
		<string name="preferences_share_summary_on">By default, tell my friends when I check-in.
		</string>
		<string name="preferences_startup_tab">Startup Tab</string>
		<string name="preferences_startup_tab_summary">Select which tab to display at startup.</string>
		<string name="preferences_unable_to_find_city_toast">Unable to update your city.</string>
		<string name="preferences_updating_city_toast">Updating your city.</string>
		<string name="preferences_welcome_city_toast">Welcome to %s!</string>
		<string name="refresh_address_label">Refresh Address</string>
		<string name="refresh_label">Reload</string>
		<string name="menu_view_path_on_hinii_dot_com">View on HiNii.com</string>
		<string name="search_already_in_progress_toast">A search is already in progress.</string>
		<string name="search_label">Search</string>
		<string name="search_venues_label">Venues</string>
		<string name="shout_action_label">Shout!</string>
		<string name="shout_activity_label">Hinii Checkin</string>
		<string name="shout_hint">Shout, shout, let it all out...                              </string>
		<string name="shout_no_venue_activity_label">Hinii Shout</string>
		<string name="state">State</string>
		<string name="stats_label">Leaderboard</string>
		<string name="tell_facebook">Tell Facebook</string>
		<string name="tell_my_friends">Tell my Friends</string>
		<string name="tell_twitter">Tell Twitter</string>
		<string name="tell_followers">Send to followers</string>
		<string name="tip_add_spinner_prompt">Select a List</string>
		<string name="tip_says">%s says</string>
		<string name="tips_activity_label">Hinii Venue Tips</string>
		<string name="title_search_finished">%s - Hinii</string>
		<string name="title_search_finished_noquery">Nearby - Hinii</string>
		<string name="title_search_inprogress">Searching "%s" - Hinii</string>
		<string name="title_search_inprogress_noquery">Searching Nearby - Hinii</string>
		<string name="zip_code">Zip Code</string>
		<string name="search_description">Venues and friends</string>
		<string name="main_activity_tab_title_me">Me</string>
		<string name="user_mayorships_activity_adapter_title">Mayorships</string>
		<string name="user_mayorships_activity_no_info">This user has no mayorships.</string>
		<string name="changelog_activity_title">About Hinii</string>
		<string name="sign_up_gender">Gender</string>
		<string name="sign_up_progress_bar_message_send_request">Joining Hinii...</string>
		<string name="venue_activity_checkin_button">CHECK-IN HERE</string>
		<string name="venue_activity_checkin_button_quick">QUICK CHECK-IN HERE</string>
		<string name="send_invite_button">Invite</string>
		<string name="prelaunch_text"></string>
		<string name="prelaunch_button"></string>
		<string name="prelaunch_checkbox_dont_show_again"></string>
		<string name="preferences_category_pings">Pings</string>
		<string name="preferences_pings_title">Pings</string>
		<string name="preferences_pings_summary">Check status of friends in the background.
		</string>
		<string name="user_actions_activity_action_pings_on">Pings on</string>
		<string name="user_actions_activity_action_pings_off">Pings off</string>
		<string name="pings_settings_instructions">Pings run in the background at the interval you
			choose below. When a friend checks-in nearby, you\'ll see a Hinii
			icon
			appear on your notification bar.\n\nYou can turn pings off per
			user
			from their user details page.</string>
		<string name="test_dumpcatcher_product_key"></string>
		<string name="dumpcatcher_product_key"></string>
		<string name="test_dumpcatcher_secret"></string>
		<string name="dumpcatcher_secret"></string>
		<string name="test_dumpcatcher_url"></string>
		<string name="dumpcatcher_url"></string>
		<string name="pointvalue_title_sort_morning">Morning</string>
		<string name="pointvalue_title_sort_afternoon">Afternoon</string>
		<string name="pointvalue_title_sort_night">Night</string>
		<string name="pointvalue_title_sort_allday">All day</string>
		<string name="pointvalue_map_tab">Map</string>
		<string name="pointvalue_details_tab">Details</string>
		<string name="hinii_search_company_spinner">With whom are you?</string>
		<string name="hinii_search_daykind_spinner">What kind of day do you want to spend?</string>
		<string name="hinii_search_daypart_spinner">What part of the day?</string>
		<string name="hinii_search_city">Nearby</string>
		<string name="hinii_search_where">Where?</string>
		<string name="hinii_search_city_elsewhere">Search elsewhere</string>
		<string name="hinii_search_where_nearby">Nearby</string>
		<string name="hinii_search">search now</string>
		<string name="hinii_no_places">No Places!</string>
		<string name="hinii_user_random_point_activity_title_cost_average">Cost</string>
		<string name="hinii_ok">ok</string>
		<string name="hinii_search_city_elsewhere_hint">Enter the place you want to search using keyboard
			or voice recognition</string>
		<string name="hinii_enter_place_using_keyboard">Write to HiNii where to look!</string>
		<string name="hinii_enter_place_using_keyboard_or_voice">Write to HiNii where to look! ...or use voice
			recognition by clicking on the microphone below</string>
		<string name="hinii_voice_recognition_prompt">Say to HiNii where to look!</string>
		<string name="hinii_search_results_tab_list">Places</string>
		<string name="hinii_search_results_tab_map">Path</string>
		<string name="hinii_type_a_place_or_speak">Enter a place</string>
		<string name="random_point_details_activity_title_vote_avg">Vote</string>
		<string name="loading">Loading...</string>
		<string name="hinii_typology">Typology</string>
		<string name="hinii_description">Description</string>
		<string name="hinii_speciality">Speciality</string>
		<string name="hinii_website">Website</string>
		<string name="hinii_telephone">Telephone</string>
		<string name="hinii_vote_average">Vote Average</string>
		<string name="hinii_vote_numbers">Number of votes</string>
		<string name="hinii_voters">voters</string>
		<string name="hinii_current_category_value">Category</string>
		<string name="hinii_closed">Closed</string>
		<string name="hinii_cost">Cost</string>
		<string name="hinii_cost_average">Cost Average</string>
		<string name="hinii_preferences_contact">Contacts</string>
		<string name="hinii_preferences_contact_hinii">Contact Hinii</string>
		<string name="hinii_preferences_contact_hinii_summary">Send a mail to Hinii</string>
		<string name="hinii_preferences_contact_author">Contact App developer</string>
		<string name="hinii_preferences_contact_author_summary">Send a mail to the App developer</string>
		<string name="hinii_preferences_information">Information</string>
		<string name="hinii_preferences_information_about">About</string>
		<string name="hinii_preferences_information_about_summary">Get information about Hinii project</string>
		<string name="visit_hinii">HiNii.com</string>
		<string name="visit_hinii_summary">Discover HiNii on www.hinii.com</string>
		<string name="more_info_on_hinii">more info on HiNii.com</string>
		<string name="localization_failed">Unable to infer your location\nYou may need to
			enable GPS and/or Wireless Location or just wait a minute in case you
			already\nset wi-fi or gps localization on</string>
		<string name="localization_go_enable">Go enable</string>
		<string name="localization_do_not_enable">Just wait a bit</string>
</resources>