<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical"
		android:background="@color/white" android:paddingLeft="5dip"
		android:paddingRight="5dip">


		<!-- 	android:text="@string/hinii_search_where_nearby" -->
		<AutoCompleteTextView
			android:completionThreshold="1" 
			android:id="@+id/AutoCompleteTextView01"
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:textColor="@android:color/primary_text_light" 
			android:hint="@string/hinii_enter_place_using_keyboard"
			android:gravity="top" 
			android:imeOptions="actionDone">
		</AutoCompleteTextView>

		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:gravity="center_vertical">
			<CheckBox android:id="@+id/checkBoxNearby" android:text="@string/hinii_search_where_nearby"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:textColor="#333">
			</CheckBox>
			<LinearLayout android:id="@+id/hiniiSearchElsewhereVoiceRecognition"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"

				android:orientation="vertical" 
				android:background="@drawable/microphone_selector"
				android:paddingLeft="5dip" 
				android:paddingRight="5dip"
				android:paddingTop="5dip"
				android:clickable="true" 
				android:layout_alignParentRight="true">
				
				<ImageView 
					android:layout_width="36dip"
					android:layout_height="36dip" 
					android:src="@drawable/microphone"
					android:scaleType="fitXY" />
			</LinearLayout>
		</RelativeLayout>
		<Button android:id="@+id/btnSearchCityElsewhere" android:text="@string/hinii_ok"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />


	</LinearLayout>

</ScrollView>
